--- a/index.html
+++ b/index.html
@@ -2,11 +2,33 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Hello World</title>
+	<link rel="stylesheet" href="./styles.css">
+	<title>Work in Progress</title>
 </head>
 <body>
-	Hello World
+<div id="content">
+	<header>Work in Progress</header>
+	<article>
+		This site is a work in progress.
+		<br/>
+		In the meantime, feel free to look at <a href="github.com/NubPaws">my GitHub</a> page.
+		<br/>
+		<br/>
+		<br/>
+		Noteworthy projects:
+		<ul>
+			<li><a href="https://github.com/NubPaws/JavaSpaceInvaders">
+				Space Invaders [Java]
+			</a></li>
+			<li><a href="https://github.com/NubPaws/DinoGameTS">
+				Google's Dino Game Clone [TypeScript]
+			</a></li>
+			<li><a href="https://github.com/NubPaws/ChatApp">
+				WhatsApp Clone [Node/React/Android]
+			</a></li>
+		</ul>
+	</article>
+</div>
 </body>
 </html>
