made a link on the main site

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 				WhatsApp Clone [Node/React/Android]
 			</a></li>
 		</ul>
+		<br/>
+		<br/>
+		Go to my <a href="./calculators/drop-chance-calculator.html">Drop Chance Calculator</a>.
 	</article>
 </div>
 </body>
