--- a/index.html
+++ b/index.html
@@ -4,33 +4,35 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./styles.css">
+	<link rel="stylesheet" href="./article-styles.css">
 	<title>Work in Progress</title>
 </head>
 <body>
 <div id="content">
 	<header>Work in Progress</header>
 	<article>
-		This site is a work in progress.
-		<br/>
-		In the meantime, feel free to look at <a href="github.com/NubPaws">my GitHub</a> page.
-		<br/>
-		<br/>
-		<br/>
-		Noteworthy projects:
+		<p>This site is a work in progress.</p>
+		<p>In the meantime, feel free to look at <a href="github.com/NubPaws">my GitHub</a> page.</p>
+		<p>Noteworthy projects:</p>
 		<ul>
-			<li><a href="https://github.com/NubPaws/JavaSpaceInvaders">
-				Space Invaders [Java]
-			</a></li>
-			<li><a href="https://github.com/NubPaws/DinoGameTS">
-				Google's Dino Game Clone [TypeScript]
-			</a></li>
-			<li><a href="https://github.com/NubPaws/ChatApp">
-				WhatsApp Clone [Node/React/Android]
-			</a></li>
+			<li>
+				<a href="https://github.com/NubPaws/JavaSpaceInvaders">
+					Space Invaders [Java]
+				</a>
+			</li>
+			<li>
+				<a href="https://github.com/NubPaws/DinoGameTS">
+					Google's Dino Game Clone [TypeScript]
+				</a>
+			</li>
+			<li>
+				<a href="https://github.com/NubPaws/ChatApp">
+					WhatsApp Clone [Node/React/Android]
+				</a>
+			</li>
 		</ul>
-		<br/>
-		<br/>
-		Go to my <a href="./calculators/drop-chance-calculator.html">Drop Chance Calculator</a>.
+		<br />
+		<p>Go to my <a href="./calculators/drop-chance-calculator.html">Drop Chance Calculator</a>.</p>
 	</article>
 </div>
 </body>
