Update the calculator style

--- a/calculators/drop-chance-calculator.html
+++ b/calculators/drop-chance-calculator.html
@@ -32,11 +32,11 @@
 		
 		<div class="data-input">
 			<label for="action-count">Action count (#)</label>
-			<input id="action-count" type="number" min="0" value="0"
+			<input id="action-count" type="number" min="0" value="0" max="1000000"
 				oninput="updateValue(this)" />
 		</div>
 	</div>
-	<hr style="opacity: 0.25" />
+	
 	<article>
 		<h1>What is this calculator for</h1>
 		<p>
