--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<header>Work in Progress</header>
 	<article>
 		<p>This site is a work in progress.</p>
-		<p>In the meantime, feel free to look at <a href="github.com/NubPaws">my GitHub</a> page.</p>
+		<p>In the meantime, feel free to look at <a href="https://github.com/NubPaws">my GitHub</a> page.</p>
 		<p>Noteworthy projects:</p>
 		<ul>
 			<li>
