Updated home page

--- a/index.html
+++ b/index.html
@@ -5,34 +5,41 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./styles.css">
 	<link rel="stylesheet" href="./article-styles.css">
-	<title>Work in Progress</title>
+	<title>Ramiverse</title>
 </head>
 <body>
 <div id="content">
-	<header>Work in Progress</header>
+	<header>Rami's Workshop</header>
 	<article>
-		<p>This site is a work in progress.</p>
-		<p>In the meantime, feel free to look at <a href="https://github.com/NubPaws">my GitHub</a> page.</p>
-		<p>Noteworthy projects:</p>
+		<p>
+			Hello and welcome to my website. My goal with this site is to have a place to post
+			personal projects and articles for the world to see. This site and it's source code
+			is hosted on <a href="https://github.com/NubPaws">my GitHub</a> page and is available
+			for all to see.
+		</p>
+		<p>
+			Thank you <a href="https://pages.github.com">GitHub Pages</a> for the free hosting :&rpar;.
+		</p>
+		<p>
+			There's no main menu for the website yet, however, here are a few links for my content.
+		</p>
 		<ul>
 			<li>
-				<a href="https://github.com/NubPaws/JavaSpaceInvaders">
-					Space Invaders [Java]
-				</a>
+				<a href="https://github.com/NubPaws/JavaSpaceInvaders">Space Invaders [Java]</a>
 			</li>
 			<li>
-				<a href="https://github.com/NubPaws/DinoGameTS">
-					Google's Dino Game Clone [TypeScript]
-				</a>
+				<a href="https://github.com/NubPaws/DinoGameTS">Google's Dino Game Clone [TypeScript]</a>
 			</li>
 			<li>
-				<a href="https://github.com/NubPaws/ChatApp">
-					WhatsApp Clone [Node/React/Android]
-				</a>
+				<a href="https://github.com/NubPaws/ChatApp">WhatsApp Clone [Node/React/Android]</a>
+			</li>
+			<li>
+				<a href="./calculators/drop-chance-calculator.html">Drop Chance Calculator [this site]</a>
+			</li>
+			<li>
+				<a href="./articles/cpp-thread-pool.html">Thread Pool in C++ [this site]</a>
 			</li>
 		</ul>
-		<br />
-		<p>Go to my <a href="./calculators/drop-chance-calculator.html">Drop Chance Calculator</a>.</p>
 	</article>
 </div>
 </body>
