Updated github thanks

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<article>
 		<p>
 			Hello and welcome to my website. My goal with this site is to have a place to post
-			personal projects and articles for the world to see. This site and it's source code
-			is hosted on <a href="https://github.com/NubPaws">my GitHub</a> page and is available
-			for all to see.
+			personal projects and articles for the world to see.
 		</p>
 		<p>
+			This site and it's source code is hosted on <a href="https://github.com/NubPaws">my GitHub</a>
+			page and is available for all to see.
 			Thank you <a href="https://pages.github.com">GitHub Pages</a> for the free hosting :&rpar;.
 		</p>
 		<p>
