Added truth table project

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 			<li>
 				<a href="./articles/cpp-thread-pool.html">Thread Pool in C++ [this site]</a>
 			</li>
+      <li>
+        <a href="https://nubpaws.github.io/CNF-DNF-Calculator/">Truth Table, CNF, and DNF Generator</a>
+      </li>
 		</ul>
 	</article>
 </div>
