Updated scripts and added a "my-wsl-setup-script" article

--- a/calculators/drop-chance-calculator.html
+++ b/calculators/drop-chance-calculator.html
@@ -9,7 +9,7 @@
 	
 	<!-- <script type="text/javascript" src="../libs/math-jax.js"></script> -->
 	<script type="text/javascript" src="../loader.js" defer></script>
-	<script type="text/javascript" src="./drop-chance-calculator.js"></script>
+	<script type="text/javascript" src="./drop-chance-calculator.js" defer></script>
 	
 	<title>Drop Chance Calculator</title>
 </head>
