Updated table of contents and indentations spaces

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
       <li>
         <a href="https://nubpaws.github.io/CNF-DNF-Calculator/">Truth Table, CNF, and DNF Generator</a>
       </li>
+      <li>
+        <a href="./articles/my-wsl-setup-script.html">My WSL setup script [this site]</a>
+      </li>
 		</ul>
 	</article>
 </div>
